// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButton renders the component 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-1 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: 0px 1px 0px rgb(25,37,50,0.08);
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  color: #111B2B;
  background-color: #ffffff;
  border-color: #CFD9E0;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
  background: #ffffff;
}

.emotion-1:hover {
  background-color: #F7F9FA;
}

.emotion-1:active,
.emotion-1:active:hover {
  background-color: #E7EBEE;
}

.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-1:hover {
  background: #ffffff;
  border-color: #0059C8;
}

.emotion-1.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #98CBFF;
  z-index: 3;
}

.emotion-1:active,
.emotion-1:active:hover {
  background: #E8F5FF;
  border-color: #0059C8;
}

<button
  class="emotion-1"
  data-state="off"
  data-test-id="cf-ui-toggle-button"
  type="button"
>
  <span
    class="emotion-0"
  >
    Toggle
  </span>
</button>
`;

exports[`ToggleButton renders the component active 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-1 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: 0px 1px 0px rgb(25,37,50,0.08);
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  color: #111B2B;
  background-color: #ffffff;
  border-color: #CFD9E0;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
  background: #E8F5FF;
  border-color: #0059C8;
}

.emotion-1:hover {
  background-color: #F7F9FA;
}

.emotion-1:active,
.emotion-1:active:hover {
  background-color: #E7EBEE;
}

.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-1:hover {
  background: #E8F5FF;
}

.emotion-1.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #98CBFF;
  z-index: 3;
}

.emotion-1:active,
.emotion-1:active:hover {
  background: #E8F5FF;
  border-color: #0059C8;
}

.emotion-1 {
  z-index: 2;
}

<button
  aria-pressed="true"
  class="emotion-1"
  data-state="on"
  data-test-id="cf-ui-toggle-button"
  type="button"
>
  <span
    class="emotion-0"
  >
    Toggle
  </span>
</button>
`;

exports[`ToggleButton renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-1 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: 0px 1px 0px rgb(25,37,50,0.08);
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  color: #111B2B;
  background-color: #ffffff;
  border-color: #CFD9E0;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
  background: #ffffff;
}

.emotion-1:hover {
  background-color: #F7F9FA;
}

.emotion-1:active,
.emotion-1:active:hover {
  background-color: #E7EBEE;
}

.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-1:hover {
  background: #ffffff;
  border-color: #0059C8;
}

.emotion-1.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #98CBFF;
  z-index: 3;
}

.emotion-1:active,
.emotion-1:active:hover {
  background: #E8F5FF;
  border-color: #0059C8;
}

<button
  class="my-extra-class emotion-1"
  data-state="off"
  data-test-id="cf-ui-toggle-button"
  type="button"
>
  <span
    class="emotion-0"
  >
    Toggle
  </span>
</button>
`;

exports[`ToggleButton renders the component with icon 1`] = `
.emotion-2 {
  display: inline-block;
}

.emotion-3 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: 0px 1px 0px rgb(25,37,50,0.08);
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  color: #111B2B;
  background-color: #ffffff;
  border-color: #CFD9E0;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
  background: #ffffff;
}

.emotion-3:hover {
  background-color: #F7F9FA;
}

.emotion-3:active,
.emotion-3:active:hover {
  background-color: #E7EBEE;
}

.emotion-3:focus {
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-3:hover {
  background: #ffffff;
  border-color: #0059C8;
}

.emotion-3.emotion-3:focus {
  box-shadow: 0px 0px 0px 3px #98CBFF;
  z-index: 3;
}

.emotion-3:active,
.emotion-3:active:hover {
  background: #E8F5FF;
  border-color: #0059C8;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0.25rem;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  fill: currentColor;
}

<button
  class="my-extra-class emotion-3"
  data-state="off"
  data-test-id="cf-ui-toggle-button"
  type="button"
>
  <span
    class="emotion-1"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
      />
    </svg>
  </span>
  <span
    class="emotion-2"
  >
    Toggle
  </span>
</button>
`;
